updated meta description

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Die Zürcher Getränkefirma mit den besten Getränken.">
+    <meta name="description" content="Die Zürcher Getränkefirma mit den besten Getränken. Wir liefern im Sommer sowie im Winter, handgemacht mit den besten lokalen Zutaten.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>randvoll GmbH | Home</title>
     <link rel="stylesheet" href="style.css">
