--- a/kontakt.html
+++ b/kontakt.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Trete in Kontakt mit der Getränkefirma mit den besten Getränken.">
+  <meta name="description" content="Ganz allgemein kann man sagen, dass wir uns über Kontakt freuen. Deshalb melde dich doch mal wider.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Randvoll GmbH | Kontakt</title>
   <link rel="stylesheet" href="style.css">
