--- a/projekte.html
+++ b/projekte.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Lerne das Team der Getränkefirma mit den besten Getränken kennen.">
+    <meta name="description" content="PopUp-Bars, Events, Merch-Drops oder sonstige wildigkeiten, wir hecken immer etwas aus. Schau mal vorbei!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Randvoll GmbH | Projekte</title>
     <link rel="stylesheet" href="style.css">
