--- a/shop.html
+++ b/shop.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Der Store der Getränkefirma mit den besten Getränken.">
+    <meta name="description" content="Unser Onlinestore ist offen! Kaufe direkt unsere stylishen Merch pieces oder unsere Getränke. Slurp!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Randvoll GmbH | Store</title>
     <link rel="stylesheet" href="style.css">
