--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Lerne das Team der Getränkefirma mit den besten Getränken kennen.">
+  <meta name="description" content="Das randvolle Team zeichnet sich durch viele verschiedene Dinge aus. Zum Beispiel durch die Tatsache, dass wir keine Ahnung haben, was wir hier eigentlich tun.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Randvoll GmbH | Über uns</title>
   <link rel="stylesheet" href="style.css">
