--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 </video>
 
 <main>
-        <img src="img/logo-randvoll.png" alt="Randvoll Logo" id="logo">
+        <img src="img/logo-randvoll.png" alt="randvoll GmbH Logo" id="logo">
+        <h1 class="visually-hidden">randvoll GmbH</h1>
         <h3><strong>die</strong> Getränkefirma.</h3>
         <hr>
         <img src="img/gifs/zDisco-BAR.gif" alt="discobar" style="width: 100%; margin-top: 10px;">
