--- a/projekte.html
+++ b/projekte.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="PopUp-Bars, Events, Merch-Drops oder sonstige wildigkeiten, wir hecken immer etwas aus. Schau mal vorbei!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Randvoll GmbH | Projekte</title>
+    <title>randvoll GmbH | Projekte</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="scrollbar.css">
     <!-- Google tag (gtag.js) -->
@@ -27,7 +27,8 @@
     <video autoplay loop muted playsinline poster="img/background-bubbles.mov">
     </video>
 
-    <a href="index.html"><img src="img/logo-randvoll.png" alt="Randvoll Logo" id="logo"></a>
+    <a href="index.html"><img src="img/logo-randvoll.png" alt="randvoll GmbH Logo" id="logo"></a>
+    <h1 class="visually-hidden">randvoll GmbH</h1>
     <h3><strong>die</strong> Getränkefirma.</h3>
     <hr>
     <img src="img/gifs/zDisco-BAR.gif" alt="discobar" style="width: 100%; margin-top: 10px;">
