--- a/shop.html
+++ b/shop.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="Unser Onlinestore ist offen! Kaufe direkt unsere stylishen Merch pieces oder unsere Getränke. Slurp!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Randvoll GmbH | Store</title>
+    <title>randvoll GmbH | Store</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="scrollbar.css">
     <!-- Google tag (gtag.js) -->
@@ -25,7 +25,7 @@
     </video>
 
     <main>
-        <a href="index.html"><img src="img/logo-randvoll.png" alt="Randvoll Logo" id="logo"></a>
+        <a href="index.html"><img src="img/logo-randvoll.png" alt="randvoll GmbH Logo" id="logo"></a>
 
         <div class="cart-logo">
             <div class="ec-cart-widget"></div>
@@ -36,7 +36,7 @@
                 <script type="text/javascript">Ecwid.init();</script>
             </div>
         </div>
-
+        <h1 class="visually-hidden">randvoll GmbH</h1>
         <h3><strong>die</strong> Getränkefirma.</h3>
         <hr>
         <img src="img/gifs/zDisco-BAR.gif" alt="discobar" style="width: 100%; margin-top: 10px;">
