--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="description" content="Die Zürcher Getränkefirma mit den besten Getränken. Wir liefern im Sommer sowie im Winter, handgemacht mit den besten lokalen Zutaten.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>randvoll GmbH | Home</title>
+    <link rel="canonical" href="https://randvoll.gmbh/" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="scrollbar.css">
     <!-- Google tag (gtag.js) -->
@@ -16,6 +17,12 @@
 
         gtag('config', 'G-EJ0T2K1FH2');
     </script>
+
+<script>
+    if (window.location.pathname.endsWith('/index.html')) {
+        window.location.replace('/');
+    }
+</script>
 </head>
 <body>
 
